# shortero-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: dfad10a75b25_initial_commit.py
app/: config.py  main.py  models.py  schema.py
app/dependencies/: database.py
app/routes/api/: __init__.py  short.py  stats.py
app/routes/internal/: redirect.py
tests/: conftest.py  test_redirect.py  test_short.py  test_stats.py
