[tool.poetry]
name = "shortero"
version = "0.1.0"
description = "A simple API for URL shortening, with click statistics (WIP)."
authors = ["WhiteMemory99 <lisen1510@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.19.2"
fastapi = {version = "^0.71.0", extras = ["all"]}
SQLAlchemy = "^1.4.29"
asyncpg = "^0.25.0"
alembic = "^1.7.5"
short_url = "^1.2.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
sqlalchemy2-stubs = "^0.0.2-alpha.19"
pytest = "^6.2.5"
httpx = "^0.21.3"
pytest-asyncio = "^0.17.0"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99
known_third_party = ["fastapi", "pydantic", "sqlalchemy", "alembic", "short_url"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
